package Block.BasicStructure;

public interface Buff {}
