package Block.BasicStructure;

import Utils.Utils;

public class GabBlock extends Block{
    public GabBlock(double v1, double v2) {
        super(v1, v2);
        bt = Utils.BlockType.GAB;
    }
}
