package Block.BasicStructure;

public interface Item { }
