package Block;

import javafx.scene.layout.Pane;

public interface Skillable {
    void activeSkill(Pane pane);
}
