package Utils;

public enum sMode {
    DEFAULT,
    DOUBLE,
    HALF;
}
